k8s/dripper.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dripper
  labels:
    app: dripper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dripper
  template:
    metadata:
      labels:
        app: dripper
    spec:
      containers:
        - name: dripper
          image: dripper:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 600
