k8s/main.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadencereader
  labels:
    app: cadencereader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cadencereader
  template:
    metadata:
      labels:
        app: cadencereader
    spec:
      containers:
        - name: cadencereader
          image: cadencereader:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 600
