k8s/dripper.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dripper
spec:
  type: NodePort
  selector:
    app: dripper
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
