k8s/local-registry.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-registry
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: local-registry
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    nodePort: 30500 # This exposes the registry on port 30500 of your host machine
