k8s/main.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadencereader
spec:
  type: NodePort
  selector:
    app: cadencereader
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
