k8s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadencereader
spec:
  type: NodePort
  selector:
    app: cadencereader
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
