k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cr-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: cadencereader.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadencereader
                port:
                  number: 8080
